perf: useMethodHandleAdapters=true — VarHandle statt Reflection (3–6× Speedup)
Runtime-Validierung (Bytecode Java 16+, selber ClassLoader, unnamed module)
bestätigt dass VarHandle/MethodHandle ohne --add-opens funktioniert.
Die READY-Logs im EventLog zeigen die erfolgreiche Init bei jedem Start.

Betrifft: Diplomacy, Transport, Warehouse — alle drei Adapter-Typen
wechseln von java.lang.reflect.* auf java.lang.invoke.*.

🤖 Generated with Codebuff
Co-Authored-By: Codebuff <noreply@codebuff.com>